<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck_base"
    tools:context=".RegistroFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:gravity="fill_horizontal"
            android:text="@string/string_aviso_registro"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#7b7b7b"
            android:textStyle="bold"
            android:padding="15dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbProductor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif-thin"
                android:paddingRight="10dip"
                android:text="@string/tab_registro_productor"
                android:textColor="#7b7b7b"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbDistribuidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="sans-serif-thin"
                android:text="@string/tab_registro_distribuidor"
                android:textColor="#7b7b7b"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/string_nombre_negocio"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#7b7b7b"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNombreNegocio"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:background="#d9d9d9"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/string_NIT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#7b7b7b"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNit"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:background="#d9d9d9"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black"
                android:textStyle="normal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/string_representante_legal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#7b7b7b"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtRepresentanteLegal"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:background="#d9d9d9"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black"
                android:textStyle="normal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/string_logo_imagen"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#7b7b7b"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:layout_margin="10dp"                
                android:contentDescription="@string/string_logo_imagen"
                android:src="@drawable/img_defbusq" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>	