<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_row_busqueda"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/img_description_config"
        android:paddingBottom="20dip"
        android:src="@drawable/img_defbusq" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_row_busq_nombreCompania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_row_busq_palabraClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="fill_horizontal"
            android:text="@string/string_palabraClave"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_row_busq_palabrasClaves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_row_busq_calificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="fill_horizontal"
                android:paddingRight="8dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_row_busq_num_comentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="fill_horizontal"
                android:paddingRight="2dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_green_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_row_busq_comentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="fill_horizontal"
                android:paddingRight="5dip"
                android:text="@string/string_num_comentarios"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_green_light"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_icon_googleplus"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/img_description_config"
                android:paddingBottom="20dip"
                android:src="@drawable/ic_googlep" />

            <TextView
                android:id="@+id/txt_row_numComentgoogleplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="fill_horizontal"
                android:paddingRight="5dip"
                android:text="@string/string_num_comentarios"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>